FEATURE: add page projet : Usage-de-python-pour-une-analyse-de-marche

--- a/output/archives.html
+++ b/output/archives.html
@@ -20,6 +20,8 @@
 <dl>
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./accueil.html">Accueil</a></dd>
+    <dt>mar. 06 septembre 2022</dt>
+    <dd><a href="./usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
