--- a/output/categories.html
+++ b/output/categories.html
@@ -19,6 +19,7 @@
     <h1>Categories for DelphinePythonique</h1>
     <ul>
         <li><a href="./category/accueil.html">Accueil</a> (1)</li>
+        <li><a href="./category/certification-developpeur-python.html">Certification Développeur Python</a> (1)</li>
     </ul>
 </section>
 
