--- a/output/archives.html
+++ b/output/archives.html
@@ -21,6 +21,8 @@
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./accueil.html">Accueil</a></dd>
     <dt>mar. 06 septembre 2022</dt>
+    <dd><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html">Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.</a></dd>
+    <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></dd>
 </dl>
 </section>
