--- a/output/accueil.html
+++ b/output/accueil.html
@@ -39,6 +39,7 @@
 <ul>
 <li><a href="usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></li>
 <li><a href="designer-une-application-de_mise_en_relation-de-tuteurs-et-d-eleves-pour du soutien scolaire.html">Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance. </a></li>
+<li><a href="developper-une-application-de-gestion-de-tournois-dechecs.html">Développer une application de gestion de tournois d'échec en mode console. </a></li>
 </ul>
     </div><!-- /.entry-content -->
 
