FEATURE: add page projet : Développer une application de classement de films

--- a/output/archives.html
+++ b/output/archives.html
@@ -23,6 +23,8 @@
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html">Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.</a></dd>
     <dt>mar. 06 septembre 2022</dt>
+    <dd><a href="./developper-une-application-de-classement-de-film.html">Développer une application de classement de film</a></dd>
+    <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./developper-une-application-de-gestion-de-tournois-dechecs.html">Développer une application de gestion de tournois d'échecs</a></dd>
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></dd>
