FIX ET FEATURE: add page projet : inversion de projet entre développer une application d'analyse de marché et développer une application calculant les combinaisons d'actions les plus rentables

--- a/output/usage-de-python-pour-une-analyse-de-marche.html
+++ b/output/usage-de-python-pour-une-analyse-de-marche.html
@@ -39,13 +39,11 @@
 extrayant les combinaisons d'actions à acheter permettant le meilleur rendement pour un coût total défini.</p>
 <h1>Compétences évaluées</h1>
 <ul>
-<li>Configurer un environnement Python</li>
-<li>Appliquer les bases de la programmation en Python</li>
-<li>Utiliser le contrôle de version avec Git et GitHub</li>
-<li>Gérer les données à l'aide du processus ETL</li>
+<li>Déconstruire un problème</li>
+<li>Développer un algorithme pour résoudre un problème</li>
 </ul>
 <h1>Dépôt du programme</h1>
-<p><a href="https://github.com/DelphinePythonique/projet2">dépôt de ce projet</a></p>
+<p><a href="https://github.com/DelphinePythonique/projet7">dépôt de ce projet</a></p>
     </div><!-- /.entry-content -->
 
   </article>
