FEATURE: ajout d'une page, application de critique de partage de critiques de livres

--- a/output/archives.html
+++ b/output/archives.html
@@ -29,6 +29,8 @@
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./developper-une-application-de-gestion-de-tournois-dechecs.html">Développer une application de gestion de tournois d'échecs</a></dd>
     <dt>mar. 06 septembre 2022</dt>
+    <dd><a href="./developper-une-application-de-partage-de-critiques-de-livres.html">Développer une application de partage de critiques de livres</a></dd>
+    <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></dd>
 </dl>
 </section>
