FEATURE: ajout d'une page, api de gestion d'incidents

--- a/output/accueil.html
+++ b/output/accueil.html
@@ -43,6 +43,7 @@
 <li><a href="./developper-une-application-de-classement-de-film.html">Développer une application de classement de films </a></li>
 <li><a href="./usage-de-python-pour-une-analyse-de-marche.html">Développer une application calculant les combinaisons d'action les plus rentables</a></li>
 <li><a href="./developper-une-application-de-partage-de-critiques-de-livres.html">Développer une application de partage de critique de livres</a></li>
+<li><a href="./developper-une-api-de-gestion-dincident.html">Développer une api de gestion d'incidents</a></li>
 </ul>
     </div><!-- /.entry-content -->
 
