FEATURE: ajout des tags sur les pages

--- a/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
+++ b/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
@@ -33,10 +33,10 @@
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/design.html">design</a> <a href="./tag/maquette.html">maquette</a> <a href="./tag/cas-dusage.html">cas d&#39;usage</a> </p>
 </footer><!-- /.post-info -->      <h1>Présentation du projet</h1>
 <p>A partir d'une liste de fonctionnalités en lien avec la mise en relation de tuteur et d'élève et des activités 
-de formation, décliner les livrables décrivant le projet; cas d'usage, user stories et maquettes</p>
+de formation, décliner les livrables décrivant le projet; cas d'usage, maquettes</p>
 <h1>Compétences évaluées</h1>
 <ul>
 <li>Gérer un projet avec les méthodologies agiles</li>
