--- a/output/index.html
+++ b/output/index.html
@@ -61,14 +61,14 @@
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/design.html">design</a> <a href="./tag/maquette.html">maquette</a> <a href="./tag/cas-dusage.html">cas d&#39;usage</a> </p>
 </footer><!-- /.post-info -->                <h1>Présentation du projet</h1>
 <p>A partir d'une liste de fonctionnalités en lien avec la mise en relation de tuteur et d'élève et des activités 
-de formation, décliner les livrables décrivant le projet; cas d'usage, user stories et maquettes</p>
+de formation, décliner les livrables décrivant le projet; cas d'usage, maquettes</p>
 <h1>Compétences évaluées</h1>
 <ul>
 <li>Gérer un projet avec les méthodologies agiles</li>
-<li>Définir les exigences fonctionnelles …</li></ul>
+<li>Définir les exigences fonctionnelles de l’application …</li></ul>
                 <a class="readmore" href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html">read more</a>
                 </div><!-- /.entry-content -->
             </article></li>
@@ -89,7 +89,7 @@ de formation, décliner les livrables décrivant le projet; cas d'usage, user st
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/api.html">api</a> <a href="./tag/django.html">django</a> </p>
 </footer><!-- /.post-info -->                <h1>Présentation du projet</h1>
 <p>Le projet a pour objectif de développer une api de gestion d'incidents. </p>
 <h1>Fonctionnalités</h1>
@@ -119,7 +119,7 @@ de formation, décliner les livrables décrivant le projet; cas d'usage, user st
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/scrapping.html">scrapping</a> <a href="./tag/dom.html">DOM</a> <a href="./tag/beautiful-soup.html">Beautiful Soup</a> <a href="./tag/request.html">request</a> </p>
 </footer><!-- /.post-info -->                <h1>Présentation du projet</h1>
 <p>Ce projet a pour objectif de récupérer des informations présentes sur un site web de type catalogue de livres.</p>
 <h1>Compétences évaluées</h1>
@@ -148,7 +148,7 @@ de formation, décliner les livrables décrivant le projet; cas d'usage, user st
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/asynchrone.html">asynchrone</a> <a href="./tag/scss.html">scss</a> <a href="./tag/front.html">front</a> </p>
 </footer><!-- /.post-info -->                <h1>Présentation du projet</h1>
 <p>Le projet a pour objectif de développer une application de classement de films alimentés au travers d'une api.</p>
 <h1>Fonctionnalités</h1>
@@ -178,7 +178,7 @@ de formation, décliner les livrables décrivant le projet; cas d'usage, user st
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/mvc.html">MVC</a> <a href="./tag/console.html">console</a> </p>
 </footer><!-- /.post-info -->                <h1>Présentation du projet</h1>
 <p>Le projet a pour objectif de développer une application à destination des organisateurs de tournois d'échec.</p>
 <h1>Fonctionnalités</h1>
@@ -206,7 +206,7 @@ seront associés en fonction de différents critères pour …</li></ul>
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/front.html">front</a> <a href="./tag/api.html">api</a> <a href="./tag/djando.html">djando</a> </p>
 </footer><!-- /.post-info -->                <h1>Présentation du projet</h1>
 <p>Le projet a pour objectif de développer une application permettant à des internautes de donner ou solliciter des avis 
 sur des livres</p>
@@ -240,7 +240,7 @@ sur des livres</p>
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/algorithme.html">algorithme</a> <a href="./tag/complexite.html">complexité</a> </p>
 </footer><!-- /.post-info -->                <h1>Présentation du projet</h1>
 <p>À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme 
 extrayant les combinaisons d'actions à acheter permettant le meilleur rendement pour un coût total défini.</p>
