--- a/output/usage-de-python-pour-une-analyse-de-marche.html
+++ b/output/usage-de-python-pour-une-analyse-de-marche.html
@@ -33,7 +33,7 @@
                 By                         <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
         </address>
 <p>In <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>.</p>
-
+<p>tags: <a href="./tag/algorithme.html">algorithme</a> <a href="./tag/complexite.html">complexité</a> </p>
 </footer><!-- /.post-info -->      <h1>Présentation du projet</h1>
 <p>À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme 
 extrayant les combinaisons d'actions à acheter permettant le meilleur rendement pour un coût total défini.</p>
