--- a/output/tags.html
+++ b/output/tags.html
@@ -18,6 +18,23 @@
 <section id="content" class="body">
     <h1>Tags for DelphinePythonique</h1>
     <ul>
+        <li><a href="./tag/algorithme.html">algorithme</a> (1)</li>
+        <li><a href="./tag/api.html">api</a> (2)</li>
+        <li><a href="./tag/asynchrone.html">asynchrone</a> (1)</li>
+        <li><a href="./tag/beautiful-soup.html">Beautiful Soup</a> (1)</li>
+        <li><a href="./tag/cas-dusage.html">cas d'usage</a> (1)</li>
+        <li><a href="./tag/complexite.html">complexité</a> (1)</li>
+        <li><a href="./tag/console.html">console</a> (1)</li>
+        <li><a href="./tag/design.html">design</a> (1)</li>
+        <li><a href="./tag/djando.html">djando</a> (1)</li>
+        <li><a href="./tag/django.html">django</a> (1)</li>
+        <li><a href="./tag/dom.html">DOM</a> (1)</li>
+        <li><a href="./tag/front.html">front</a> (2)</li>
+        <li><a href="./tag/maquette.html">maquette</a> (1)</li>
+        <li><a href="./tag/mvc.html">MVC</a> (1)</li>
+        <li><a href="./tag/request.html">request</a> (1)</li>
+        <li><a href="./tag/scrapping.html">scrapping</a> (1)</li>
+        <li><a href="./tag/scss.html">scss</a> (1)</li>
     </ul>
 </section>
 
