--- a/output/usage-de-python-pour-une-analyse-de-marche.html
+++ b/output/usage-de-python-pour-une-analyse-de-marche.html
@@ -7,7 +7,7 @@
         <title>Usage de python pour une analyse de marché</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./theme/css/style.css" />
         <meta name="description" content="Présentation du projet À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme extrayant..." />
 </head>
 
