--- a/output/authors.html
+++ b/output/authors.html
@@ -7,7 +7,7 @@
         <title>DelphinePythonique - Authors</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./theme/css/style.css" />
 </head>
 
 <body id="index" class="home">
