IMPROVEMENT: changement de la taille de la police du texte général

--- a/output/accueil.html
+++ b/output/accueil.html
@@ -7,7 +7,7 @@
         <title>Accueil</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <link rel="stylesheet" href="./theme/css/style.css" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
         <meta name="description" content="Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom développeur python: Développer une application..." />
 </head>
 
