--- a/output/archives.html
+++ b/output/archives.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
-<body id="index" class="home">
+<body id="index" class="materialize-red lighten-5 ">
 <div class="container">
         <header>
                <nav>
@@ -25,7 +25,7 @@
         </header><!-- /#banner -->
         <div class="row">
              <div class="col m3 teal lighten-2" >
-                     <section id="extras" class="body">
+                     <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
                                   <div class="card blue-grey darken-1">
@@ -33,17 +33,24 @@
                                       <span class="card-title">DelphinePythonique</span>
                                         Développeuse et intégratrice de solution python
                                     </div>
-                                    <div class="card-action  ">
-                                         <div id="extras" class="social"  >
+                                    <div class=" card-action  ">
+                                         <div  class="social"  >
 
                                                 <a  href="https://www.linkedin.com/in/delphine-lemire/">LinkedIn</a>
 
 
                                                 <a  href="https://github.com/DelphinePythonique">Github</a>
 
-  </div>
+                                        </div>
                                     </div>
                                   </div>
+                                    <ul class="collection with-header">
+                                    <li class="collection-header"><h4>Categories de projets</h4></li>
+                                    <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
+
+                                  </ul>
+
+
                                 </div>
                               </div>
 
@@ -52,13 +59,11 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-5">
+             <div  class="col s12 m9 materialize-red lighten-4">
 <section id="content" class="body">
 <h1>Archives for DelphinePythonique</h1>
 
 <dl>
-    <dt>mar. 06 septembre 2022</dt>
-    <dd><a href="./accueil.html">Accueil</a></dd>
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html">Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.</a></dd>
     <dt>mar. 06 septembre 2022</dt>
@@ -72,14 +77,14 @@
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./developper-une-application-de-partage-de-critiques-de-livres.html">Développer une application de partage de critiques de livres</a></dd>
     <dt>mar. 06 septembre 2022</dt>
+    <dd><a href="./portfolio.html">Portfolio</a></dd>
+    <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></dd>
 </dl>
 </section>
              </div>
 
         </div>
-
-
 
 
         <footer id="contentinfo" class="page-footer">
