--- a/output/tags.html
+++ b/output/tags.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
-<body id="index" class="home">
+<body id="index" class="materialize-red lighten-5 ">
 <div class="container">
         <header>
                <nav>
@@ -25,7 +25,7 @@
         </header><!-- /#banner -->
         <div class="row">
              <div class="col m3 teal lighten-2" >
-                     <section id="extras" class="body">
+                     <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
                                   <div class="card blue-grey darken-1">
@@ -33,17 +33,24 @@
                                       <span class="card-title">DelphinePythonique</span>
                                         Développeuse et intégratrice de solution python
                                     </div>
-                                    <div class="card-action  ">
-                                         <div id="extras" class="social"  >
+                                    <div class=" card-action  ">
+                                         <div  class="social"  >
 
                                                 <a  href="https://www.linkedin.com/in/delphine-lemire/">LinkedIn</a>
 
 
                                                 <a  href="https://github.com/DelphinePythonique">Github</a>
 
-  </div>
+                                        </div>
                                     </div>
                                   </div>
+                                    <ul class="collection with-header">
+                                    <li class="collection-header"><h4>Categories de projets</h4></li>
+                                    <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
+
+                                  </ul>
+
+
                                 </div>
                               </div>
 
@@ -52,7 +59,7 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-5">
+             <div  class="col s12 m9 materialize-red lighten-4">
 
 <section id="content" class="body">
     <h1>Tags for DelphinePythonique</h1>
@@ -65,23 +72,23 @@
         <li><a href="./tag/complexite.html">complexité</a> (1)</li>
         <li><a href="./tag/console.html">console</a> (1)</li>
         <li><a href="./tag/design.html">design</a> (1)</li>
-        <li><a href="./tag/djando.html">djando</a> (1)</li>
-        <li><a href="./tag/django.html">django</a> (1)</li>
+        <li><a href="./tag/django.html">django</a> (2)</li>
         <li><a href="./tag/dom.html">DOM</a> (1)</li>
         <li><a href="./tag/front.html">front</a> (2)</li>
         <li><a href="./tag/maquette.html">maquette</a> (1)</li>
+        <li><a href="./tag/materializecss.html">materializecss</a> (2)</li>
         <li><a href="./tag/mvc.html">MVC</a> (1)</li>
+        <li><a href="./tag/python.html">python</a> (6)</li>
         <li><a href="./tag/request.html">request</a> (1)</li>
         <li><a href="./tag/scrapping.html">scrapping</a> (1)</li>
-        <li><a href="./tag/scss.html">scss</a> (1)</li>
+        <li><a href="./tag/scss.html">scss</a> (2)</li>
+        <li><a href="./tag/vanilla-javascript.html">vanilla javascript</a> (1)</li>
     </ul>
 </section>
 
              </div>
 
         </div>
-
-
 
 
         <footer id="contentinfo" class="page-footer">
