--- a/output/usage-de-python-pour-une-analyse-de-marche.html
+++ b/output/usage-de-python-pour-une-analyse-de-marche.html
@@ -8,10 +8,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="./theme/css/main.css" />
-        <meta name="description" content="Présentation du projet À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme extrayant..." />
+        <meta name="description" content="À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme" />
 </head>
 
-<body id="index" class="home">
+<body id="index" class="materialize-red lighten-5 ">
 <div class="container">
         <header>
                <nav>
@@ -26,7 +26,7 @@
         </header><!-- /#banner -->
         <div class="row">
              <div class="col m3 teal lighten-2" >
-                     <section id="extras" class="body">
+                     <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
                                   <div class="card blue-grey darken-1">
@@ -34,17 +34,24 @@
                                       <span class="card-title">DelphinePythonique</span>
                                         Développeuse et intégratrice de solution python
                                     </div>
-                                    <div class="card-action  ">
-                                         <div id="extras" class="social"  >
+                                    <div class=" card-action  ">
+                                         <div  class="social"  >
 
                                                 <a  href="https://www.linkedin.com/in/delphine-lemire/">LinkedIn</a>
 
 
                                                 <a  href="https://github.com/DelphinePythonique">Github</a>
 
-  </div>
+                                        </div>
                                     </div>
                                   </div>
+                                    <ul class="collection with-header">
+                                    <li class="collection-header"><h4>Categories de projets</h4></li>
+                                    <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
+
+                                  </ul>
+
+
                                 </div>
                               </div>
 
@@ -53,7 +60,7 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-5">
+             <div  class="col s12 m9 materialize-red lighten-4">
 <section id="content" class="body">
   <article>
     <header>
@@ -69,8 +76,10 @@
     - dans la rubrique  <a href="./category/certification-developpeur-python.html">Certification Développeur Python</a>
 <p>tags: <a href="./tag/algorithme.html">
     <span class="chip">algorithme</span></a> <a href="./tag/complexite.html">
-    <span class="chip">complexité</span></a> </p>
-</footer><!-- /.post-info -->      <h2>Présentation du projet</h2>
+    <span class="chip">complexité</span></a> <a href="./tag/python.html">
+    <span class="chip">python</span></a> </p>
+</footer><!-- /.post-info -->      <p>extrayant les combinaisons d'actions à acheter permettant le meilleur rendement pour un coût total défini.</p>
+<h2>Présentation du projet</h2>
 <p>À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme 
 extrayant les combinaisons d'actions à acheter permettant le meilleur rendement pour un coût total défini.</p>
 <h2>Compétences évaluées</h2>
@@ -87,8 +96,6 @@ extrayant les combinaisons d'actions à acheter permettant le meilleur rendement
              </div>
 
         </div>
-
-
 
 
         <footer id="contentinfo" class="page-footer">
