FIX: probleme d'url homepage

--- a/output/archives.html
+++ b/output/archives.html
@@ -77,7 +77,7 @@
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./developper-une-application-de-partage-de-critiques-de-livres.html">Développer une application de partage de critiques de livres</a></dd>
     <dt>mar. 06 septembre 2022</dt>
-    <dd><a href="./portfolio.html">Portfolio</a></dd>
+    <dd><a href="./index.html">Portfolio</a></dd>
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></dd>
 </dl>
