FEATURE: CV in pdf

--- a/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
+++ b/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
@@ -32,8 +32,13 @@
                                   <div class="card blue-grey darken-1">
                                     <div class="card-content white-text">
                                       <span class="card-title">DelphinePythonique</span>
-                                        Développeuse et intégratrice de solution python
+                                      <span>Développeuse et intégratrice de solution python</span>
+
+
                                     </div>
+                                       <div class=" card-action  ">
+                                           <span><a href="images/CV.pdf">Curriculum Vitae</a></span>
+                                       </div>
                                     <div class=" card-action  ">
                                          <div  class="social"  >
 
@@ -46,10 +51,10 @@
                                     </div>
                                   </div>
                                     <ul class="collection with-header">
-                                    <li class="collection-header"><h4>Categories de projets</h4></li>
-                                    <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
+                                        <li class="collection-header"><h4>Categories de projets</h4></li>
+                                        <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
 
-                                  </ul>
+                                    </ul>
 
 
                                 </div>
@@ -114,7 +119,7 @@ de formation, décliner les livrables décrivant le projet; cas d'usage, maquett
                          </div>
                     <div class="col m6 s12">
                            <ul class="collection">
-                                
+
                                  </ul>
                          </div>
                    </div>
