--- a/output/archives.html
+++ b/output/archives.html
@@ -31,8 +31,13 @@
                                   <div class="card blue-grey darken-1">
                                     <div class="card-content white-text">
                                       <span class="card-title">DelphinePythonique</span>
-                                        Développeuse et intégratrice de solution python
+                                      <span>Développeuse et intégratrice de solution python</span>
+
+
                                     </div>
+                                       <div class=" card-action  ">
+                                           <span><a href="images/CV.pdf">Curriculum Vitae</a></span>
+                                       </div>
                                     <div class=" card-action  ">
                                          <div  class="social"  >
 
@@ -45,10 +50,10 @@
                                     </div>
                                   </div>
                                     <ul class="collection with-header">
-                                    <li class="collection-header"><h4>Categories de projets</h4></li>
-                                    <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
+                                        <li class="collection-header"><h4>Categories de projets</h4></li>
+                                        <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
 
-                                  </ul>
+                                    </ul>
 
 
                                 </div>
@@ -102,7 +107,7 @@
                          </div>
                     <div class="col m6 s12">
                            <ul class="collection">
-                                
+
                                  </ul>
                          </div>
                    </div>
