--- a/output/index.html
+++ b/output/index.html
@@ -38,6 +38,7 @@
                                     </div>
                                        <div class=" card-action  ">
                                            <span><a href="images/CV.pdf">Curriculum Vitae</a></span>
+                                           <span><a href="images/CV_DETAIL.pdf">Curriculum Vitae détaillé</a></span>
                                        </div>
                                     <div class=" card-action  ">
                                          <div  class="social"  >
