FEATURE: change site's colors

--- a/output/usage-de-python-pour-une-analyse-de-marche.html
+++ b/output/usage-de-python-pour-une-analyse-de-marche.html
@@ -11,7 +11,7 @@
         <meta name="description" content="À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme" />
 </head>
 
-<body id="index" class="materialize-red lighten-5 ">
+<body id="index" class="grey lighten-5 ">
 <div class="container">
         <header>
                <nav>
@@ -25,14 +25,14 @@
                 </ul> </div></nav>
         </header><!-- /#banner -->
         <div class="row">
-             <div class="col m3 teal lighten-2" >
+             <div class="col m3 " >
                      <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
-                                  <div class="card blue-grey darken-1">
+                                  <div class="card grey darken-1">
                                     <div class="card-content white-text">
                                       <span class="card-title">DelphinePythonique</span>
-                                      <span>Développeuse et intégratrice de solution python</span>
+                                      <span>Développeuse et intégratrice de solutions python</span>
 
 
                                     </div>
@@ -66,7 +66,7 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-4">
+             <div  class="col s12 m9 ">
 <section id="content" class="body">
   <article>
     <header>
@@ -94,7 +94,7 @@ extrayant les combinaisons d'actions à acheter permettant le meilleur rendement
 <li>Développer un algorithme pour résoudre un problème</li>
 </ul>
 <h2>Dépôt du programme</h2>
-<p><a href="https://github.com/DelphinePythonique/projet7">dépôt de ce projet</a></p>
+<p><a href="https://github.com/DelphinePythonique/projet7">Lien vers le dépôt de ce projet</a></p>
     </div><!-- /.entry-content -->
 
   </article>
@@ -117,7 +117,7 @@ extrayant les combinaisons d'actions à acheter permettant le meilleur rendement
 
                                  </ul>
                          </div>
-                    <div class="col m6 s12">
+                        <div class="col m6 s12">
                            <ul class="collection">
 
                                  </ul>
