--- a/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
+++ b/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
@@ -11,7 +11,7 @@
         <meta name="description" content="A partir d'une liste de fonctionnalités en lien avec la mise en relation de tuteur et d'élève et des activités" />
 </head>
 
-<body id="index" class="materialize-red lighten-5 ">
+<body id="index" class="grey lighten-5 ">
 <div class="container">
         <header>
                <nav>
@@ -25,14 +25,14 @@
                 </ul> </div></nav>
         </header><!-- /#banner -->
         <div class="row">
-             <div class="col m3 teal lighten-2" >
+             <div class="col m3 " >
                      <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
-                                  <div class="card blue-grey darken-1">
+                                  <div class="card grey darken-1">
                                     <div class="card-content white-text">
                                       <span class="card-title">DelphinePythonique</span>
-                                      <span>Développeuse et intégratrice de solution python</span>
+                                      <span>Développeuse et intégratrice de solutions python</span>
 
 
                                     </div>
@@ -66,7 +66,7 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-4">
+             <div  class="col s12 m9 ">
 <section id="content" class="body">
   <article>
     <header>
@@ -118,7 +118,7 @@ de formation, décliner les livrables décrivant le projet; cas d'usage, maquett
 
                                  </ul>
                          </div>
-                    <div class="col m6 s12">
+                        <div class="col m6 s12">
                            <ul class="collection">
 
                                  </ul>
