--- a/output/tags.html
+++ b/output/tags.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
-<body id="index" class="materialize-red lighten-5 ">
+<body id="index" class="grey lighten-5 ">
 <div class="container">
         <header>
                <nav>
@@ -24,14 +24,14 @@
                 </ul> </div></nav>
         </header><!-- /#banner -->
         <div class="row">
-             <div class="col m3 teal lighten-2" >
+             <div class="col m3 " >
                      <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
-                                  <div class="card blue-grey darken-1">
+                                  <div class="card grey darken-1">
                                     <div class="card-content white-text">
                                       <span class="card-title">DelphinePythonique</span>
-                                      <span>Développeuse et intégratrice de solution python</span>
+                                      <span>Développeuse et intégratrice de solutions python</span>
 
 
                                     </div>
@@ -65,7 +65,7 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-4">
+             <div  class="col s12 m9 ">
 
 <section id="content" class="body">
     <h1>Tags for DelphinePythonique</h1>
@@ -110,7 +110,7 @@
 
                                  </ul>
                          </div>
-                    <div class="col m6 s12">
+                        <div class="col m6 s12">
                            <ul class="collection">
 
                                  </ul>
