FEATURE: add icons

--- a/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
+++ b/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
@@ -85,16 +85,16 @@
     <span class="chip">maquette</span></a> <a href="./tag/cas-dusage.html">
     <span class="chip">cas d&#39;usage</span></a> </p>
 </footer><!-- /.post-info -->      <p>de formation, décliner les livrables décrivant le projet; cas d'usage, maquettes</p>
-<h2>Présentation du projet</h2>
+<h2><i class="medium material-icons">assignment</i> Présentation du projet</h2>
 <p>A partir d'une liste de fonctionnalités en lien avec la mise en relation de tuteur et d'élève et des activités 
 de formation, décliner les livrables décrivant le projet; cas d'usage, maquettes</p>
-<h2>Compétences évaluées</h2>
+<h2><i class="medium material-icons">school</i> Compétences évaluées</h2>
 <ul>
 <li>Gérer un projet avec les méthodologies agiles</li>
 <li>Définir les exigences fonctionnelles de l’application à partir du besoin client</li>
 <li>Prototyper une solution technique pour un client avec les modèles de domaine et maquettes</li>
 </ul>
-<h2>Dépôt du programme</h2>
+<h2><i class="medium material-icons">folder</i> Dépôt du programme</h2>
 <p>Les livrables pourront être consultés lors d'un entretien visio ou présentiel. </p>
     </div><!-- /.entry-content -->
 
