--- a/output/usage-de-python-pour-une-analyse-de-marche.html
+++ b/output/usage-de-python-pour-une-analyse-de-marche.html
@@ -85,16 +85,16 @@
     <span class="chip">complexité</span></a> <a href="./tag/python.html">
     <span class="chip">python</span></a> </p>
 </footer><!-- /.post-info -->      <p>extrayant les combinaisons d'actions à acheter permettant le meilleur rendement pour un coût total défini.</p>
-<h2>Présentation du projet</h2>
+<h2><i class="medium material-icons">assignment</i> Présentation du projet</h2>
 <p>À partir d'un fichier texte contenant une liste d'actions ayant un coût et une rentabilité, créer un programme 
 extrayant les combinaisons d'actions à acheter permettant le meilleur rendement pour un coût total défini.</p>
-<h2>Compétences évaluées</h2>
+<h2><i class="medium material-icons">school</i> Compétences évaluées</h2>
 <ul>
 <li>Déconstruire un problème</li>
 <li>Développer un algorithme pour résoudre un problème</li>
 </ul>
-<h2>Dépôt du programme</h2>
-<p><a href="https://github.com/DelphinePythonique/projet7">Lien vers le dépôt de ce projet</a></p>
+<h2><i class="medium material-icons">folder</i> Dépôt du programme</h2>
+<p><a href="https://github.com/DelphinePythonique/projet7">Lien vers le dépôt de ce projet  <i class="tiny material-icons">open_in_new</i></a></p>
     </div><!-- /.entry-content -->
 
   </article>
