--- a/output/index.html
+++ b/output/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="./theme/css/main.css" />
-        <meta name="description" content="Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom développeur python: Développer une application..." />
+        <meta name="description" content="Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom développeur python: done Développer une..." />
 </head>
 
 <body id="index" class="grey lighten-5 ">
@@ -83,13 +83,13 @@
 
 </footer><!-- /.post-info -->      <p>Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom <strong>développeur python</strong>: </p>
 <ul>
-<li><a href="./developper-une-application-danalyse-de-marche.html">Développer une application d'analyse de marché <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html">Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.<i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-application-de-gestion-de-tournois-dechecs.html">Développer une application de gestion de tournois d'échec en mode console. <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-application-de-classement-de-film.html">Développer une application de classement de films <i class="tiny material-icons">open_in_new</i> </a></li>
-<li><a href="./usage-de-python-pour-une-analyse-de-marche.html">Développer une application calculant les combinaisons d'action les plus rentables <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-application-de-partage-de-critiques-de-livres.html">Développer une application de partage de critique de livres <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-api-de-gestion-dincident.html">Développer une api de gestion d'incidents <i class="tiny material-icons">open_in_new</i></a></li>
+<li><a href="./developper-une-application-danalyse-de-marche.html"><i class="tiny material-icons">done</i> Développer une application d'analyse de marché <i class="tiny material-icons">open_in_new</i></a></li>
+<li><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html"><i class="tiny material-icons">done</i> Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.<i class="tiny material-icons">open_in_new</i></a></li>
+<li><a href="./developper-une-application-de-gestion-de-tournois-dechecs.html"><i class="tiny material-icons">done</i> Développer une application de gestion de tournois d'échec en mode console. <i class="tiny material-icons">open_in_new</i></a></li>
+<li><a href="./developper-une-application-de-classement-de-film.html"><i class="tiny material-icons">done</i> Développer une application de classement de films <i class="tiny material-icons">open_in_new</i> </a></li>
+<li><a href="./usage-de-python-pour-une-analyse-de-marche.html"><i class="tiny material-icons">done</i> Développer une application calculant les combinaisons d'action les plus rentables <i class="tiny material-icons">open_in_new</i></a></li>
+<li><a href="./developper-une-application-de-partage-de-critiques-de-livres.html"><i class="tiny material-icons">done</i> Développer une application de partage de critique de livres <i class="tiny material-icons">open_in_new</i></a></li>
+<li><a href="./developper-une-api-de-gestion-dincident.html"><i class="tiny material-icons">done</i> Développer une api de gestion d'incidents <i class="tiny material-icons">open_in_new</i></a></li>
 </ul>
     </div><!-- /.entry-content -->
 
