FEATURE: change apparence homepage

--- a/output/archives.html
+++ b/output/archives.html
@@ -16,7 +16,7 @@
                <nav>
                     <div class="nav-wrapper">
                         <div class="container">
-                        <a href="./"  class="brand-logo" >DelphinePythonique</a>
+                        <a href="./"  class="brand-logo" >DelphinePythonique <i>(accueil)</i></a>
 </div>
 
                     <ul>
@@ -75,6 +75,8 @@
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./developper-une-api-de-gestion-dincident.html">Développer une api de gestion d'incident</a></dd>
     <dt>mar. 06 septembre 2022</dt>
+    <dd><a href="./developper-une-application-calculant-les-combinaisons-daction-les-plus-rentables.html">Développer une application calculant les combinaisons d'action les plus rentables</a></dd>
+    <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./developper-une-application-danalyse-de-marche.html">Développer une application d'analyse de marché</a></dd>
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./developper-une-application-de-classement-de-film.html">Développer une application de classement de film</a></dd>
@@ -84,8 +86,6 @@
     <dd><a href="./developper-une-application-de-partage-de-critiques-de-livres.html">Développer une application de partage de critiques de livres</a></dd>
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./index.html">Portfolio</a></dd>
-    <dt>mar. 06 septembre 2022</dt>
-    <dd><a href="./usage-de-python-pour-une-analyse-de-marche.html">Usage de python pour une analyse de marché</a></dd>
 </dl>
 </section>
              </div>
