--- a/output/authors.html
+++ b/output/authors.html
@@ -16,7 +16,7 @@
                <nav>
                     <div class="nav-wrapper">
                         <div class="container">
-                        <a href="./"  class="brand-logo" >DelphinePythonique</a>
+                        <a href="./"  class="brand-logo" >DelphinePythonique <i>(accueil)</i></a>
 </div>
 
                     <ul>
