--- a/output/index.html
+++ b/output/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="./theme/css/main.css" />
-        <meta name="description" content="Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom développeur python: done Développer une..." />
+        <meta name="description" content="Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom développeur python: find_in_page Développer une..." />
 </head>
 
 <body id="index" class="grey lighten-5 ">
@@ -17,7 +17,7 @@
                <nav>
                     <div class="nav-wrapper">
                         <div class="container">
-                        <a href="./"  class="brand-logo" >DelphinePythonique</a>
+                        <a href="./"  class="brand-logo" >DelphinePythonique <i>(accueil)</i></a>
 </div>
 
                     <ul>
@@ -82,15 +82,58 @@
     - dans la rubrique  <a href="./category/accueil.html">Accueil</a>
 
 </footer><!-- /.post-info -->      <p>Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom <strong>développeur python</strong>: </p>
-<ul>
-<li><a href="./developper-une-application-danalyse-de-marche.html"><i class="tiny material-icons">done</i> Développer une application d'analyse de marché <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html"><i class="tiny material-icons">done</i> Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.<i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-application-de-gestion-de-tournois-dechecs.html"><i class="tiny material-icons">done</i> Développer une application de gestion de tournois d'échec en mode console. <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-application-de-classement-de-film.html"><i class="tiny material-icons">done</i> Développer une application de classement de films <i class="tiny material-icons">open_in_new</i> </a></li>
-<li><a href="./usage-de-python-pour-une-analyse-de-marche.html"><i class="tiny material-icons">done</i> Développer une application calculant les combinaisons d'action les plus rentables <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-application-de-partage-de-critiques-de-livres.html"><i class="tiny material-icons">done</i> Développer une application de partage de critique de livres <i class="tiny material-icons">open_in_new</i></a></li>
-<li><a href="./developper-une-api-de-gestion-dincident.html"><i class="tiny material-icons">done</i> Développer une api de gestion d'incidents <i class="tiny material-icons">open_in_new</i></a></li>
-</ul>
+<ul class="collection">
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">find_in_page</i>
+      <span class="title"><a href="./developper-une-application-danalyse-de-marche.html">Développer une application d'analyse de marché</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./developper-une-application-danalyse-de-marche.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+
+<li class="collection-item avatar">
+      <i class="material-icons circle grey">school</i>
+      <span class="title"><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html">Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">games</i>
+      <span class="title"><a href="./developper-une-application-de-gestion-de-tournois-dechecs.html">Développer une application de gestion de tournois d'échec en mode console.</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./developper-une-application-de-gestion-de-tournois-dechecs.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">local_movies</i>
+      <span class="title"><a href="./developper-une-application-de-classement-de-film.html">Développer une application de classement de films</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./developper-une-application-de-classement-de-film.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">insert_chart</i>
+      <span class="title"><a href="./developper-une-application-calculant-les-combinaisons-daction-les-plus-rentables.html">Développer une application calculant les combinaisons d'action les plus rentables</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./developper-une-application-calculant-les-combinaisons-daction-les-plus-rentables.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">book</i>
+      <span class="title"><a href="./developper-une-application-de-partage-de-critiques-de-livres.html">Développer une application de partage de critique de livres</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./developper-une-application-de-partage-de-critiques-de-livres.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">build</i>
+      <span class="title"><a href="./developper-une-api-de-gestion-dincident.html">Développer une api de gestion d'incidents</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./developper-une-api-de-gestion-dincident.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+  </ul>
     </div><!-- /.entry-content -->
 
   </article>
