--- a/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
+++ b/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="./theme/css/main.css" />
-        <meta name="description" content="A partir d'une liste de fonctionnalités en lien avec la mise en relation de tuteur et d'élève et des activités" />
+        <meta name="description" content="A partir d'une liste de fonctionnalités en lien avec la mise en relation de tuteur et d'élève et des activités de formation, décliner les..." />
 </head>
 
 <body id="index" class="grey lighten-5 ">
@@ -84,8 +84,7 @@
     <span class="chip">design</span></a> <a href="./tag/maquette.html">
     <span class="chip">maquette</span></a> <a href="./tag/cas-dusage.html">
     <span class="chip">cas d&#39;usage</span></a> </p>
-</footer><!-- /.post-info -->      <p>de formation, décliner les livrables décrivant le projet; cas d'usage, maquettes</p>
-<h2><i class="medium material-icons">assignment</i> Présentation du projet</h2>
+</footer><!-- /.post-info -->      <h2><i class="medium material-icons">assignment</i> Présentation du projet</h2>
 <p>A partir d'une liste de fonctionnalités en lien avec la mise en relation de tuteur et d'élève et des activités 
 de formation, décliner les livrables décrivant le projet; cas d'usage, maquettes</p>
 <h2><i class="medium material-icons">school</i> Compétences évaluées</h2>
