FEATURE/ajout d'article pro

--- a/output/index.html
+++ b/output/index.html
@@ -134,6 +134,31 @@
       <a class="secondary-content" href="./developper-une-api-de-gestion-dincident.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
   </ul>
+
+<p>Ci-dessous une liste des projets réalisées au cours de ma vie professionnelle:</p>
+<ul class="collection">
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">image_aspect_ratio</i>
+      <span class="title"><a href="./pouvoir-generer-automatiquement-le-plan-de-lamenagement-dun-vehicule-renault-tech.html">Pouvoir générer automatiquement le plan de l'aménagement d'un véhicule Renault Tech</a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./pouvoir-generer-automatiquement-le-plan-de-lamenagement-dun-vehicule-renault-tech.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+     <li class="collection-item avatar">
+          <i class="material-icons circle grey">flight_takeoff</i>
+          <span class="title"><a href="./gerer-les-voyages-organises-dune-entreprise.html">Pouvoir gérer les voyages organisés d'une entreprise</a></span>
+          <p>
+          </p>
+          <a class="secondary-content" href="./gerer-les-voyages-organises-dune-entreprise.html"><i class="tiny material-icons">open_in_new</i></a>
+     </li>
+    <li class="collection-item avatar">
+          <i class="material-icons circle grey">shopping_cart</i>
+          <span class="title"><a href="./pouvoir-gerer-les-achats-realises-via-un-site-e-commerce-inverse.html">Pouvoir gérer les achats réalisés via un site e-commerce inversé </a></span>
+          <p>
+          </p>
+          <a class="secondary-content" href="./pouvoir-gerer-les-achats-realises-via-un-site-e-commerce-inverse.html"><i class="tiny material-icons">open_in_new</i></a>
+     </li>
+</ul>
     </div><!-- /.entry-content -->
 
   </article>
