--- a/output/tags.html
+++ b/output/tags.html
@@ -70,6 +70,7 @@
 <section id="content" class="body">
     <h1>Tags for DelphinePythonique</h1>
     <ul>
+        <li><a href="./tag/access.html">Access</a> (1)</li>
         <li><a href="./tag/algorithme.html">algorithme</a> (1)</li>
         <li><a href="./tag/api.html">api</a> (2)</li>
         <li><a href="./tag/asynchrone.html">asynchrone</a> (1)</li>
@@ -80,15 +81,22 @@
         <li><a href="./tag/design.html">design</a> (1)</li>
         <li><a href="./tag/django.html">django</a> (2)</li>
         <li><a href="./tag/dom.html">DOM</a> (1)</li>
+        <li><a href="./tag/drupal.html">Drupal</a> (1)</li>
+        <li><a href="./tag/excel.html">Excel</a> (1)</li>
+        <li><a href="./tag/formules.html">formules</a> (1)</li>
         <li><a href="./tag/front.html">front</a> (2)</li>
-        <li><a href="./tag/maquette.html">maquette</a> (1)</li>
+        <li><a href="./tag/maquette.html">maquette</a> (2)</li>
         <li><a href="./tag/materializecss.html">materializecss</a> (2)</li>
         <li><a href="./tag/mvc.html">MVC</a> (1)</li>
-        <li><a href="./tag/python.html">python</a> (6)</li>
+        <li><a href="./tag/odoo.html">Odoo</a> (1)</li>
+        <li><a href="./tag/openerp.html">OpenERP</a> (1)</li>
+        <li><a href="./tag/php.html">php</a> (1)</li>
+        <li><a href="./tag/python.html">python</a> (7)</li>
         <li><a href="./tag/request.html">request</a> (1)</li>
         <li><a href="./tag/scrapping.html">scrapping</a> (1)</li>
         <li><a href="./tag/scss.html">scss</a> (2)</li>
         <li><a href="./tag/vanilla-javascript.html">vanilla javascript</a> (1)</li>
+        <li><a href="./tag/vba.html">vba</a> (2)</li>
     </ul>
 </section>
 
