FIX/ Mise en page avec des saut de puce pour la lisibilité

--- a/output/archives.html
+++ b/output/archives.html
@@ -75,6 +75,8 @@
     <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./pouvoir-generer-automatiquement-le-plan-de-lamenagement-dun-vehicule-renault-tech.html">Pouvoir générer automatiquement le plan de l'aménagement d'un véhicule Renault Tech</a></dd>
     <dt>sam. 05 novembre 2022</dt>
+    <dd><a href="./pouvoir-gerer-la-mise-sous-pli-dans-un-context-electoral.html">Pouvoir gérer la mise sous pli dans un context électoral</a></dd>
+    <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./pouvoir-gerer-les-achats-realises-via-un-site-e-commerce-inverse.html">Pouvoir gérer les achats réalisés via un site e-commerce inversé</a></dd>
     <dt>mar. 06 septembre 2022</dt>
     <dd><a href="./designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html">Designer une application de mise en relation de tuteurs et d'élèves pour du soutien scolaire à distance.</a></dd>
