--- a/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
+++ b/output/designer-une-application-de-mise-en-relation-de-tuteurs-et-deleves-pour-du-soutien-scolaire-a-distance.html
@@ -89,9 +89,9 @@
 de formation, décliner les livrables décrivant le projet; cas d'usage, maquettes</p>
 <h2><i class="medium material-icons">school</i> Compétences évaluées</h2>
 <ul>
-<li>Gérer un projet avec les méthodologies agiles</li>
-<li>Définir les exigences fonctionnelles de l’application à partir du besoin client</li>
-<li>Prototyper une solution technique pour un client avec les modèles de domaine et maquettes</li>
+<li><i class="tiny material-icons">done</i> Gérer un projet avec les méthodologies agiles</li>
+<li><i class="tiny material-icons">done</i> Définir les exigences fonctionnelles de l’application à partir du besoin client</li>
+<li><i class="tiny material-icons">done</i> Prototyper une solution technique pour un client avec les modèles de domaine et maquettes</li>
 </ul>
 <h2><i class="medium material-icons">folder</i> Dépôt du programme</h2>
 <p>Les livrables pourront être consultés lors d'un entretien visio ou présentiel. </p>
