--- a/output/index.html
+++ b/output/index.html
@@ -135,7 +135,7 @@
     </li>
   </ul>
 
-<p>Ci-dessous une liste des projets réalisées au cours de ma vie professionnelle:</p>
+<p>Ci-dessous une liste des projets de développement réalisés au cours de ma vie professionnelle:</p>
 <ul class="collection">
     <li class="collection-item avatar">
       <i class="material-icons circle grey">image_aspect_ratio</i>
@@ -157,6 +157,13 @@
           <p>
           </p>
           <a class="secondary-content" href="./pouvoir-gerer-les-achats-realises-via-un-site-e-commerce-inverse.html"><i class="tiny material-icons">open_in_new</i></a>
+     </li>
+    <li class="collection-item avatar">
+          <i class="material-icons circle grey">share</i>
+          <span class="title"><a href="./pouvoir-gerer-la-mise-sous-pli-dans-un-context-electoral.html">Pouvoir gérer la mise sous pli dans un context électoral </a></span>
+          <p>
+          </p>
+          <a class="secondary-content" href="./pouvoir-gerer-la-mise-sous-pli-dans-un-context-electoral.html"><i class="tiny material-icons">open_in_new</i></a>
      </li>
 </ul>
     </div><!-- /.entry-content -->
