--- a/output/tags.html
+++ b/output/tags.html
@@ -78,6 +78,7 @@
         <li><a href="./tag/cas-dusage.html">cas d'usage</a> (1)</li>
         <li><a href="./tag/complexite.html">complexité</a> (1)</li>
         <li><a href="./tag/console.html">console</a> (1)</li>
+        <li><a href="./tag/delphi.html">Delphi</a> (1)</li>
         <li><a href="./tag/design.html">design</a> (1)</li>
         <li><a href="./tag/django.html">django</a> (2)</li>
         <li><a href="./tag/dom.html">DOM</a> (1)</li>
@@ -90,6 +91,7 @@
         <li><a href="./tag/mvc.html">MVC</a> (1)</li>
         <li><a href="./tag/odoo.html">Odoo</a> (1)</li>
         <li><a href="./tag/openerp.html">OpenERP</a> (1)</li>
+        <li><a href="./tag/oracle-7.html">Oracle 7</a> (1)</li>
         <li><a href="./tag/php.html">php</a> (1)</li>
         <li><a href="./tag/python.html">python</a> (7)</li>
         <li><a href="./tag/request.html">request</a> (1)</li>
