FEATURE/ add content for experience and animation

--- a/output/tags.html
+++ b/output/tags.html
@@ -53,10 +53,9 @@
                                     <ul class="collection with-header">
                                         <li class="collection-header"><h4>Categories de projets</h4></li>
                                         <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2022-2023</a></li>
-
+                                        <li class="collection-item"><a href="./category/experience-professionnelle.html">Expérience développeur 2000 à 2021</a></li>
+                                        <li class="collection-item"><a href="./category/animation.html">Augmenter la productivité par l'animation</a></li>
                                     </ul>
-
-
                                 </div>
                               </div>
 
@@ -72,13 +71,14 @@
     <ul>
         <li><a href="./tag/access.html">Access</a> (1)</li>
         <li><a href="./tag/algorithme.html">algorithme</a> (1)</li>
+        <li><a href="./tag/animation.html">animation</a> (1)</li>
         <li><a href="./tag/api.html">api</a> (2)</li>
         <li><a href="./tag/asynchrone.html">asynchrone</a> (1)</li>
         <li><a href="./tag/beautiful-soup.html">Beautiful Soup</a> (1)</li>
         <li><a href="./tag/cas-dusage.html">cas d'usage</a> (1)</li>
         <li><a href="./tag/complexite.html">complexité</a> (1)</li>
         <li><a href="./tag/console.html">console</a> (1)</li>
-        <li><a href="./tag/delphi.html">Delphi</a> (1)</li>
+        <li><a href="./tag/delphi.html">Delphi</a> (2)</li>
         <li><a href="./tag/design.html">design</a> (1)</li>
         <li><a href="./tag/django.html">django</a> (2)</li>
         <li><a href="./tag/dom.html">DOM</a> (1)</li>
@@ -91,13 +91,18 @@
         <li><a href="./tag/mvc.html">MVC</a> (1)</li>
         <li><a href="./tag/odoo.html">Odoo</a> (1)</li>
         <li><a href="./tag/openerp.html">OpenERP</a> (1)</li>
-        <li><a href="./tag/oracle-7.html">Oracle 7</a> (1)</li>
+        <li><a href="./tag/oracle-7.html">Oracle 7</a> (2)</li>
         <li><a href="./tag/php.html">php</a> (1)</li>
+        <li><a href="./tag/productivite.html">productivité</a> (1)</li>
         <li><a href="./tag/python.html">python</a> (7)</li>
         <li><a href="./tag/request.html">request</a> (1)</li>
         <li><a href="./tag/scrapping.html">scrapping</a> (1)</li>
         <li><a href="./tag/scss.html">scss</a> (2)</li>
+        <li><a href="./tag/sql.html">SQL</a> (1)</li>
+        <li><a href="./tag/sql-server.html">SQL Server</a> (1)</li>
+        <li><a href="./tag/storytelling.html">storytelling</a> (1)</li>
         <li><a href="./tag/vanilla-javascript.html">vanilla javascript</a> (1)</li>
+        <li><a href="./tag/vb6.html">VB6</a> (1)</li>
         <li><a href="./tag/vba.html">vba</a> (2)</li>
     </ul>
 </section>
