--- a/output/archives.html
+++ b/output/archives.html
@@ -53,10 +53,9 @@
                                     <ul class="collection with-header">
                                         <li class="collection-header"><h4>Categories de projets</h4></li>
                                         <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2022-2023</a></li>
-
+                                        <li class="collection-item"><a href="./category/experience-professionnelle.html">Expérience développeur 2000 à 2021</a></li>
+                                        <li class="collection-item"><a href="./category/animation.html">Augmenter la productivité par l'animation</a></li>
                                     </ul>
-
-
                                 </div>
                               </div>
 
@@ -71,9 +70,13 @@
 
 <dl>
     <dt>sam. 05 novembre 2022</dt>
+    <dd><a href="./animer-par-le-storytelling.html">Animer par le storytelling</a></dd>
+    <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./gerer-les-voyages-organises-dune-entreprise.html">Gérer les voyages organisés d'une entreprise</a></dd>
     <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./pouvoir-generer-automatiquement-le-plan-de-lamenagement-dun-vehicule-renault-tech.html">Pouvoir générer automatiquement le plan de l'aménagement d'un véhicule Renault Tech</a></dd>
+    <dt>sam. 05 novembre 2022</dt>
+    <dd><a href="./pouvoir-gerer-des-activites-dans-un-context-logistique.html">Pouvoir gérer des activités dans un context logistique</a></dd>
     <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./pouvoir-gerer-la-mise-sous-pli-dans-un-context-electoral.html">Pouvoir gérer la mise sous pli dans un context électoral</a></dd>
     <dt>sam. 05 novembre 2022</dt>
