--- a/output/authors.html
+++ b/output/authors.html
@@ -53,10 +53,9 @@
                                     <ul class="collection with-header">
                                         <li class="collection-header"><h4>Categories de projets</h4></li>
                                         <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2022-2023</a></li>
-
+                                        <li class="collection-item"><a href="./category/experience-professionnelle.html">Expérience développeur 2000 à 2021</a></li>
+                                        <li class="collection-item"><a href="./category/animation.html">Augmenter la productivité par l'animation</a></li>
                                     </ul>
-
-
                                 </div>
                               </div>
 
@@ -70,7 +69,7 @@
 <section id="content" class="body">
     <h1>Authors on DelphinePythonique</h1>
     <ul>
-        <li><a href="./author/delphinepythonique.html">DelphinePythonique</a> (12)</li>
+        <li><a href="./author/delphinepythonique.html">DelphinePythonique</a> (14)</li>
     </ul>
 </section>
 
