--- a/output/categories.html
+++ b/output/categories.html
@@ -53,10 +53,9 @@
                                     <ul class="collection with-header">
                                         <li class="collection-header"><h4>Categories de projets</h4></li>
                                         <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2022-2023</a></li>
-
+                                        <li class="collection-item"><a href="./category/experience-professionnelle.html">Expérience développeur 2000 à 2021</a></li>
+                                        <li class="collection-item"><a href="./category/animation.html">Augmenter la productivité par l'animation</a></li>
                                     </ul>
-
-
                                 </div>
                               </div>
 
@@ -71,8 +70,9 @@
     <h1>Categories for DelphinePythonique</h1>
     <ul>
         <li><a href="./category/accueil.html">Accueil</a> (1)</li>
+        <li><a href="./category/animation.html">Animation</a> (1)</li>
         <li><a href="./category/certification-developpeur-python.html">Certification Développeur Python</a> (7)</li>
-        <li><a href="./category/experience-professionnelle.html">Experience professionnelle</a> (4)</li>
+        <li><a href="./category/experience-professionnelle.html">Experience professionnelle</a> (5)</li>
     </ul>
 </section>
 
