--- a/output/index.html
+++ b/output/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="./theme/css/main.css" />
-        <meta name="description" content="Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom développeur python: find_in_page Développer une..." />
+        <meta name="description" content="Projets réalisés au cours de ma formation développeur Python Projets réalisés dans un contexte professionnel Augmenter la productivité par..." />
 </head>
 
 <body id="index" class="grey lighten-5 ">
@@ -54,10 +54,9 @@
                                     <ul class="collection with-header">
                                         <li class="collection-header"><h4>Categories de projets</h4></li>
                                         <li class="collection-item"><a href="./category/certification-developpeur-python.html">Certification développeur python 2022-2023</a></li>
-
+                                        <li class="collection-item"><a href="./category/experience-professionnelle.html">Expérience développeur 2000 à 2021</a></li>
+                                        <li class="collection-item"><a href="./category/animation.html">Augmenter la productivité par l'animation</a></li>
                                     </ul>
-
-
                                 </div>
                               </div>
 
@@ -81,9 +80,37 @@
         - par                 <a class="url fn" href="./author/delphinepythonique.html">DelphinePythonique</a>
     - dans la rubrique  <a href="./category/accueil.html">Accueil</a>
 
-</footer><!-- /.post-info -->      <p>Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom <strong>développeur python</strong>: </p>
+</footer><!-- /.post-info -->      <div class="row">
+    <div class="col s12 m4">
+        <a href="#list_projets_formation">
+          <div class="card-panel grey">
+            <span class="white-text">
+    Projets réalisés au cours de ma formation développeur Python<br>
+            </span>
+          </div>
+        </a>
+    </div>
+     <div class="col s12 m4">
+        <a href="#list_projets_pros">
+          <div class="card-panel grey">
+            <span class="white-text">Projets réalisés dans un contexte professionnel<br><br></span>
+          </div>
+        </a>
+    </div>
+     <div class="col s12 m4">
+        <a href="#list_projets_animation">
+          <div class="card-panel grey">
+            <span class="white-text">Augmenter la productivité par l'animation</span>
+          </div>
+        </a>
+    </div>
+  </div>
+<p>list_projets_animation
+<span id="list_projets_formation">
+Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom <strong>développeur python</strong>: 
+</span></p>
 <ul class="collection">
-    <li class="collection-item avatar">
+    <li  class="collection-item avatar">
       <i class="material-icons circle grey">find_in_page</i>
       <span class="title"><a href="./developper-une-application-danalyse-de-marche.html">Développer une application d'analyse de marché</a></span>
       <p>
@@ -135,7 +162,7 @@
     </li>
   </ul>
 
-<p>Ci-dessous une liste des projets de développement réalisés au cours de ma vie professionnelle:</p>
+<p><span id="list_projets_pros">Ci-dessous une liste de quelques projets de développement réalisés au cours de ma vie professionnelle:</span></p>
 <ul class="collection">
     <li class="collection-item avatar">
       <i class="material-icons circle grey">image_aspect_ratio</i>
@@ -165,7 +192,24 @@
           </p>
           <a class="secondary-content" href="./pouvoir-gerer-la-mise-sous-pli-dans-un-context-electoral.html"><i class="tiny material-icons">open_in_new</i></a>
      </li>
+    <li class="collection-item avatar">
+          <i class="material-icons circle grey">share</i>
+          <span class="title"><a href="./pouvoir-gerer-des-activites-dans-un-context-logistique.html">Pouvoir gérer des activités de gestion de stock</a></span>
+          <p>
+          </p>
+          <a class="secondary-content" href="./pouvoir-gerer-des-activites-dans-un-context-logistique.html"><i class="tiny material-icons">open_in_new</i></a>
+     </li>
+
 </ul>
+<p><span id="list_projets_animation">Ci-dessous une liste des projets d'animation réalisés au cours de ma vie professionnelle et parfois personnelles:</span></p>
+<ul class="collection">
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <span class="title"><a href="./animer-par-le-storytelling.html">Animer un plateau de développeur par le storytelling </a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./animer-par-le-storytelling.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
     </div><!-- /.entry-content -->
 
   </article>
