FEATURE/ add content for animation

--- a/output/tags.html
+++ b/output/tags.html
@@ -71,7 +71,7 @@
     <ul>
         <li><a href="./tag/access.html">Access</a> (1)</li>
         <li><a href="./tag/algorithme.html">algorithme</a> (1)</li>
-        <li><a href="./tag/animation.html">animation</a> (1)</li>
+        <li><a href="./tag/animation.html">animation</a> (2)</li>
         <li><a href="./tag/api.html">api</a> (2)</li>
         <li><a href="./tag/asynchrone.html">asynchrone</a> (1)</li>
         <li><a href="./tag/beautiful-soup.html">Beautiful Soup</a> (1)</li>
@@ -81,6 +81,7 @@
         <li><a href="./tag/delphi.html">Delphi</a> (2)</li>
         <li><a href="./tag/design.html">design</a> (1)</li>
         <li><a href="./tag/django.html">django</a> (2)</li>
+        <li><a href="./tag/documentation.html">documentation</a> (1)</li>
         <li><a href="./tag/dom.html">DOM</a> (1)</li>
         <li><a href="./tag/drupal.html">Drupal</a> (1)</li>
         <li><a href="./tag/excel.html">Excel</a> (1)</li>
@@ -93,7 +94,7 @@
         <li><a href="./tag/openerp.html">OpenERP</a> (1)</li>
         <li><a href="./tag/oracle-7.html">Oracle 7</a> (2)</li>
         <li><a href="./tag/php.html">php</a> (1)</li>
-        <li><a href="./tag/productivite.html">productivité</a> (1)</li>
+        <li><a href="./tag/productivite.html">productivité</a> (2)</li>
         <li><a href="./tag/python.html">python</a> (7)</li>
         <li><a href="./tag/request.html">request</a> (1)</li>
         <li><a href="./tag/scrapping.html">scrapping</a> (1)</li>
