--- a/output/archives.html
+++ b/output/archives.html
@@ -70,6 +70,8 @@
 
 <dl>
     <dt>sam. 05 novembre 2022</dt>
+    <dd><a href="./animer-par-la-documentation.html">Animer par la documentation</a></dd>
+    <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./animer-par-le-storytelling.html">Animer par le storytelling</a></dd>
     <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./gerer-les-voyages-organises-dune-entreprise.html">Gérer les voyages organisés d'une entreprise</a></dd>
